# robinhood-backend-assignment

./: .env  Cargo.toml  README.md
api/: Cargo.toml
api/src/: comment.rs  job.rs  lib.rs  user.rs
application/: Cargo.toml
application/src/: comment.rs  job.rs  user.rs
domain/: Cargo.toml
domain/src/: comment.rs  job.rs  jwt.rs  lib.rs  models.rs  schema.rs  user.rs
infrastructure/: Cargo.toml  diesel.toml
infrastructure/migrations/2024-09-07-060951_create_jobs/: up.sql
infrastructure/migrations/2024-09-07-061007_create_comments/: up.sql
infrastructure/migrations/2024-09-08-001508_create_users/: up.sql
infrastructure/src/: comment.rs  db.rs  job.rs  lib.rs  schema.rs  user.rs
shared/: Cargo.toml
shared/src/: lib.rs  password.rs  response_models.rs
