[package]
name = "domain"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
diesel = { version = "2.0.0", features = ["postgres", "chrono"] }
serde = { version = "1.0.147", features = ["derive"] }
chrono ={version = "0.4.38",features = ["serde"]}
jsonwebtoken = "9.3.0"
serde_json = "1.0.88"
dotenvy = "0.15"
